GG-22986 Set correct default value for Web Console logs destination if IGNITE_HOME property is not set. (#421)